--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=imagesgallery
+
+spring.datasource.url = jdbc:mysql://localhost:3306/db_imagesGallery
+spring.datasource.username=root
+spring.datasource.password=
+
+server.port = 8000
+
+spring.jpa.hibernate.ddl-auto=update
